maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:19: error: Boolean(false) does not take parameters
	return false();
                    ^