maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {

def keepHandOnSideWall() {
	gauche();
	while (estFaceMur()) {
	droite();
	}
	avance();
		}

def avoirMurGauche(): Boolean = {
	gauche();
	if (estFaceMur()) {
		return true;
		droite();
	}
	droite();
	return false();
	
}

 while (!(estSurBiscuit())) {
 	if (avoirMurGauche()) {
 	keepHandOnSideWall()
 }
 }
    prendBiscuit();

}
